pom: increase spring boot version and make necessary configs, process.html: GET request makes more sense to load the main page, index.html: simplify page, Add seventimer client and service, PublicService remove innecessary logic and value insert, Add Nominatim client and service to get geolocation of a city Remove repositories as they are not working anymore (changed API license), Add models for new APIs, remove models of old APIs, Remove CityForm check, PublicController: work back to basics, AppConfig: create configurated clients as spring beans

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,20 +1,20 @@
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymleaf.org">
+<head>
+	<meta charset="UTF-8">
+	<title>Form Example</title>
+</head>
 <body>
 	<h1>Weather application</h1>
-	<br></br>
-	<form action="#" th:action="@{/process}" th:object="${cityForm}" method="POST">
+	<br>
+	<form action="#" th:action="@{/process}" method="POST">
 		<div>
-			Please enter the city name: <input type="text" th:field="*{name}" />
-			<p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</p>
+			<label for="cityName">City name:</label>
+			<input type="text" id="cityName" name="cityName" />
 		</div>
-		<br></br>
-		<input type="radio" name="provider" value="openWeather" checked="true" />OpenWeather
-		<br></br> 
-		<input type="radio" name="provider" value="darkSky" />DarkSky
-		<br></br> 
-		
+		<br>
+
 		<button style="height: 70px; width: 200px" type="submit">Find
 			out the weather!</button>
 	</form>
