--- a/src/main/resources/templates/process.html
+++ b/src/main/resources/templates/process.html
@@ -6,7 +6,7 @@
 	<br></br>
 	<p th:text="'Temperature: ' + ${temp} + ' Celsius'"></p>
 
-	<form action="/" method="POST">
+	<form action="/" method="GET">
 		<button style="height:70px;width:200px">Try it again!</button>
 	</form>
 </body>
