--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,7 +5,7 @@
 		<h2>Sorry but you encountered with an exception:</h2>
 		<p th:text="${exception}"></p>
 		<br></br>
-		<form action="/" method="POST">
+		<form action="/" method="GET">
         <button style="height:70px;width:200px">Try again!</button>
     </form>
 	</section>
