--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,13 +1,20 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymleaf.org">
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="../static/css/pico.min.css" th:href="@{css/pico.min.css}">
+	<title>Error page</title>
+</head>
 <body>
-	<section>
-		<h2>Sorry but you encountered with an exception:</h2>
-		<p th:text="${exception}"></p>
-		<br></br>
-		<form action="/" method="GET">
-        <button style="height:70px;width:200px">Try again!</button>
-    </form>
-	</section>
+	<main class="container">
+		<section>
+			<h2>Sorry but you encountered with an exception:</h2>
+			<p th:text="${exception}"></p>
+			<br></br>
+			<form action="/" method="GET">
+				<button>Try again!</button>
+			</form>
+		</section>
+	</main>
 </body>
 </html>
